Added enciso4 tests of address_size: dwarfdump.conf option.

--- a/dwarfdump.conf
+++ b/dwarfdump.conf
@@ -13,6 +13,9 @@
 # same_val_reg: 1035   
 # undefined_val_reg: 1034  
 # reg_table_size: <size of table>
+# address_size: <4 or 8, Rarely needed, see example below. >
+# includeabi: <abiname  Inserts the referenced abi as if its text was
+#            directly inserted at this point.>
 # endabi:  <abiname>
 #
 # Symbolic names do not work here, use literal numbers
@@ -416,6 +419,15 @@ reg: pc 23
 
 endabi: m68k
 
+# Demonstrates  use of address_size and includeabi keywords.
+# address_size is useful when an Elf64 object has DWARF2
+# 32bit (4 byte) address-size frame data (which has no address_size field)
+# and no .debug_info section to provide the 32bit address size.
+beginabi: ppc32bitaddress
+address_size: 4
+includeabi: ppc
+endabi: ppc32bitaddress
+
 beginabi: ppc
 # This abi defined Oct 2008 based on:
 # http://refspecs.linuxfoundation.org/ELF/ppc64/PPC-elf64abi-1.9.html
@@ -644,8 +656,8 @@ endabi: generic100
 
 beginabi: arm
 frame_interface: 3
-# When using frame_interface: 3 the size of the register table
-# is not fixed. It can be as large as needed. 
+# When using frame_interface: 3 the size of the register
+# table is not fixed.  It can be as large as needed.
 reg_table_size: 288
 cfa_reg: 1436  # DW_FRAME_CFA_COL3
 initial_reg_value:  1034
@@ -656,6 +668,9 @@ undefined_val_reg: 1034
 # the reg_table_size must be increased and (possibly)
 # the cfa, same_value, undefined_value reg values changed
 # here.
+# r0-r15 are 0 through 15.
+# Numbers 16 through 63 had meaning
+# in some ARM DWARF register mappings.
 reg: s0 64
 reg: s1 65
 reg: s2 66
