We are doing a decent job with all options tested and dwarfdump matches dwarfdump2 output.

--- a/dwarfdump.conf
+++ b/dwarfdump.conf
@@ -31,9 +31,9 @@
 #
 
 
-# MIPS abi (as an example).
+# MIPS abi,the old IRIX form, not to be used on modern objects.
 # Begin with abi name (use here and on dwarfdump command line).
-beginabi: mips
+beginabi: mips-irix
 
 # Instructs dwarfdump to default to the older frame interface.
 # Use value 3 to use the newer interface.
@@ -138,15 +138,17 @@ reg: slk 65
 
 
 # End of abi definition.
+endabi: mips-irix
+
+
+# Make 'mips' abi be a modern MIPS, not an old IRIX version.
+beginabi: mips
+includeabi: mips-simple3
 endabi: mips
 
 
-
-
-
-
 # MIPS/IRIX  ISA/ABI for testing libdwarf.
-beginabi: mips-simple
+beginabi: mips-irix2
 frame_interface: 2
 reg_table_size: 66
 cfa_reg: 0
@@ -159,7 +161,7 @@ reg: ra  64
 reg: slk 65
 
 # End of abi definition.
-endabi: mips-simple
+endabi: mips-irix2
 
 # MIPS/IRIX  ISA/ABI for testing  the new frame interface
 # with libdwarf.
