Now configure as freebsd i386 base executables (.O versions) avaialable.  Configure now works harder to find a usable previous-version dwarfdump*.O to use.

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,5 +1,7 @@
 # Makefile which builds builds the code to test and
 # runs the executables.
+# Running these tests multiple times simultaneously
+# in a single directory will result in incorrect results and errors.
 
 all:  build testonly
 
@@ -8,8 +10,18 @@ test: build testonly
 build:
 	sh ./PICKUPBIN
 
+# Run the test set all 3 times.
 testonly:
 	sh ./RUNALL.sh
+
+# To run an individual test set, choose one of these.
+# RUNALL.sh does all three.
+dd:
+	./DWARFTEST.sh dd 2>ALLdd 1>&2
+dd2:
+	./DWARFTEST.sh dd2 2>ALLdd2 1>&2
+ddtodd2:
+	./DWARFTEST.sh ddtodd2 2>ALLddtodd2 1>&2
 
 clean:
 	sh ./CLEANUP
