Two change here:
First, these no longer reference dwarfdump2.
PICKUPBIN
RUNALL.sh
configure
configure.in
dwarfdump-x86-ubuntu-13.04.O
dwarfdump-x86_64-ubuntu-13.04.O

Second, these are deleted, we do not build or test dwarfdump2 now:
dwarfdump2-i386-freebsd-9.1.O
dwarfdump2-x86-ubuntu-13.04.O
dwarfdump2-x86_64-freebsd-9.1.O
dwarfdump2-x86_64-ubuntu-13.04.O

Third, the test no longer uses dwarfdump2,
it uses dwarfdump. And the FAIL cases now
have exit 1 as they should have all along.
sandnes2/RUNTEST.sh

--- a/configure.in
+++ b/configure.in
@@ -20,7 +20,7 @@ AC_CANONICAL_SYSTEM
 
 # The path to libdwarf source we want is a path to
 # the directory containing the libdwarf, dwarfdump, 
-# dwarfdump2, dwarfgen, and dwarfexample source directories.
+# dwarfgen, and dwarfexample source directories.
 
 here=`pwd`
 fullpath=$here/../code
@@ -47,7 +47,7 @@ then
 fi
 
 
-# We look for a usable dwarfdump.O and dwarfdump2.O
+# We look for a usable dwarfdump.O 
 # This finds the last usable one. Perhaps we should
 # find the first?
 # The Bourne Shell (sh) can do something horrible when
@@ -82,24 +82,6 @@ do
      fi
      continue
    fi
-   grep 'dwarfdump2-' < junkf1 >/dev/null 2>/dev/null
-   r=$?
-   if test $r = 0
-   then
-     (./$i -i moshe/a.out.t |head -20) >junkf2    2>/dev/null
-     # Remove file that should not be here, if it exists.
-     rm -f *@*
-     cmp junkf2 findexecutable.base  >/dev/null 2>/dev/null
-     t=$?
-     if test $t -eq 0
-     then
-        echo "found usable dwarfdump2  $i"
-        dd2found='y'
-        rm -f dwarfdump2.O
-        cp $i dwarfdump2.O
-     fi
-     continue
-   fi
 done
 rm -f junkf1
 rm -f junkf2
@@ -109,14 +91,9 @@ then
   echo "Unable to find a usable dwarfdump.O, giving up."
   exit 2
 fi
-if test $dd2found = 'n'
-then
-  echo "Unable to find a usable dwarfdump2.O, giving up."
-  exit 2
-fi
 
 
-for i in libdwarf dwarfdump dwarfdump2 dwarfgen dwarfexample
+for i in libdwarf dwarfdump dwarfgen dwarfexample
 do
   if test -d $fullpath/$i 
   then
