Running this twice on a system (in the same directory) won't work properly, so we have prechecks now so once you start DWARFTEST.sh you won't get another started during the run.
new file:   CHECKIFRUNNING.sh
modified:   DWARFTEST.sh
modified:   Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -3,16 +3,18 @@
 # Running these tests multiple times simultaneously
 # in a single directory will result in incorrect results and errors.
 
-all:  build testonly
+all:  pretest build testonly
 
-test: build testonly
+test: pretest build testonly
 
-build:
+build: pretest
 	sh ./PICKUPBIN
 
 # Run the test set all 3 times.
 testonly:
 	sh ./RUNALL.sh
+pretest:
+	sh CHECKIFRUNNING.sh
 
 # To run an individual test set, choose one of these.
 # RUNALL.sh does all three.
