Removing references to dd2 and ddtodd2, those were about a C++ implementation of dwarfdump and we dropped the C++ version of dwarfdump as unnecessary once we had the tsearch functions available (to everyone) in libdwarf/dwarfdump. 	modified:   Makefile.in

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,20 +10,14 @@ test: pretest build testonly
 build: pretest
 	sh ./PICKUPBIN
 
-# Run the test set all 3 times.
 testonly:
 	sh ./RUNALL.sh
 pretest:
 	sh CHECKIFRUNNING.sh
 
-# To run an individual test set, choose one of these.
-# RUNALL.sh does all three.
+# RUNALL.sh does this
 dd:
 	./DWARFTEST.sh dd 2>ALLdd 1>&2
-dd2:
-	./DWARFTEST.sh dd2 2>ALLdd2 1>&2
-ddtodd2:
-	./DWARFTEST.sh ddtodd2 2>ALLddtodd2 1>&2
 
 clean:
 	sh ./CLEANUP
