--- a/zero/Makefile
+++ b/zero/Makefile
@@ -1,4 +1,6 @@
-#
+# Copyright 2019 David Anderson.
+# This trivial Makefile is hereby placed into the public domain.
+
 CXXFLAGS = -g -Wall
 all: zero
 zero: zero.cc
