Squashed commit of the following: Now one can run regression tests in any convenient temporary directory. Significant changes in  DWARFTEST.sh CLEANUP PICKUPBIN CHECKIFRUNNING.sh RUNALL.sh BASEFILES is created by configure with all the needed target/source directories. BASEFUNCS created with a couple shell functions used in various runtest files.
Every */runtest.sh also changed significantly.
Each now uses BASEFILES to get the needed directory
names.

commit 674212bf1067c32a013d8d7c38d3a2db35d5a781
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 09:04:21 2020 -0700

    Now remove t.o copied from kaufmann into debugfissionb.
    	modified:   CLEANUP

commit f7519af67c3fc596e75cf8558feabdc6f8977b0f
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 08:42:11 2020 -0700

    Now with NEWS and with a simpler lock file arrangement.
    	modified:   DWARFTEST.sh

commit 1be250349d49c3a84a48017e725dc458580dcd9c
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 08:41:45 2020 -0700

    	new file:   NEWS

commit 7e38a3e5e936e31ee1842cd4b5bd4dda02b306bc
Author: David Anderson <davea42@linuxmail.org>
Date:   Tue Oct 27 07:59:43 2020 -0700

    Removed use of ps command. no longer needed.
    	modified:   CHECKIFRUNNING.sh
    	modified:   DWARFTEST.sh

commit 5e4645b03cf99063f0cc7bb4ae577c697408862c
Author: David Anderson <davea42@linuxmail.org>
Date:   Mon Oct 26 21:45:46 2020 -0700

    Working on separate and this location.
    	modified:   CLEANUP
    	modified:   DWARFTEST.sh
    	modified:   PICKUPBIN
    	modified:   RUNALL.sh
    	modified:   baddie1/runtest.sh
    	modified:   configure
    	modified:   configure.ac

commit a02238bdb7d2994299cf1ac67aebbaab4e763ac2
Author: David Anderson <davea42@linuxmail.org>
Date:   Mon Oct 26 16:06:35 2020 -0700

    blddir needed -rf
    	modified:   CLEANUP
    Remove blank line
    	modified:   PICKUPBIN

commit 23f3c223ec8158ec77c5593b7c42caf37c424395
Author: David Anderson <dave

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,28 +1,29 @@
 # Makefile which builds builds the code to test and
 # runs the executables.
 # Running these tests multiple times simultaneously
-# in a single directory will result in incorrect results and errors.
+# in a single directory will result in incorrect 
+# results and errors.
+# We use BASEFILES to give tests the needed context.
 
 buildwithlibelf = @withlibelf@
+testsrc = @srcdir@
 all:  pretest build testonly
 
 test: pretest build testonly
 
 build: pretest
-	sh ./PICKUPBIN $(buildwithlibelf)
+	sh $(testsrc)/PICKUPBIN $(buildwithlibelf) 
 
+check: pretest testonly
 testonly:
-	sh ./RUNALL.sh $(buildwithlibelf)
+	sh $(testsrc)/RUNALL.sh $(buildwithlibelf)
 pretest:
-	sh CHECKIFRUNNING.sh
-
+	sh $(testsrc)/CHECKIFRUNNING.sh
 # RUNALL.sh does this
 dd:
-	./DWARFTEST.sh $(buildwithlibelf) 2>ALLdd 1>&2
-
+	$(testsrc)/DWARFTEST.sh $(buildwithlibelf)  2>ALLdd 1>&2
 clean:
-	sh ./CLEANUP
-
+	sh $(testsrc)/CLEANUP 
 distclean: clean
 	rm -f Makefile
 	rm -f config.h
