Now explains a bit about option: command 	modified:   dwarfdump.conf Shows the use of the option. 	new file:   testdwarfdump.conf

--- a/dwarfdump.conf
+++ b/dwarfdump.conf
@@ -2,6 +2,11 @@
 # Used to configure dwarfdump printing of .debug_frame and
 # .eh_frame.
 
+# Uncomment the following to turn on the new and better
+# format of DW_OP Dwarf expressions without needing
+# to use the option on the command line.
+#option: --format-expr-op-per-line
+
 # Any number of abi's can be described. Only one can be selected
 # in a given dwarfdump run (see dwarfdump options)
 #  Available commands are
