This is how the 'bad' test object created. Is not necessary to ever re-run. 	modified:   bad-dwop/BUILD
New baselines, plus addition of
echo "rerun: $ts/runtest.sh"
(or the like) to all the places any runtest.sh
detects a failure. Make it much easier to rerun a single
failing test out-of-test-tree.
	modified:   baddie1/incorrectatchild.base
	modified:   baddie1/incorrectatitself.base
	modified:   baddie1/incorrectbeforechild.base
	modified:   baddie1/incorrectbeforeitself.base
	modified:   baddie1/incorrectnest.base
	modified:   baddie1/incorrectnest2.base
	modified:   baddie1/runtest.sh
	modified:   bigobj/runtest.sh
	modified:   data16/runtest.sh
	modified:   debugfission/archivedwo-iMvvv.base.gz
	modified:   debugfission/archivedwo.base.gz
	modified:   debugfission/runtest.sh
	modified:   debugfission/targetdwo.base.gz
	modified:   debugfissionb/runtest.sh
	modified:   debuglink/runtest.sh
	modified:   dwarfdump-x86_64-ubuntu.O
	modified:   dwarfextract/runtest.sh
	modified:   dwarfextract/test1.base
	modified:   dwarfextract/testc.base
	modified:   dwgena/runtest.sh
	modified:   dwgena/test1.base.gz
	modified:   dwgena/test2.base.gz
	modified:   dwgena/test3.base.gz
	modified:   dwgena/test4.base.gz
	modified:   dwgena/test5.base.gz
	modified:   dwgena/test6.base.gz
	modified:   dwgena/test7.base.gz
	modified:   dwgena/test8.base.gz
	modified:   dwgena/test9.base.gz
	modified:   dwgenc/base.stdout
	modified:   dwgenc/runtest.sh
	modified:   enciso4/runtest.sh
	modified:   err_allocate/runtest.sh
	modified:   findcu/runtest.sh
	modified:   frame1/runtest.sh
	modified:   guilfanov/runtest.sh
	modified:   hughes2/runtest.sh
	modified:   implicitconst/dgout.base
	modified:   implicitconst/implicit.base
	modified:   implicitconst/runtest.sh
	modified:   legendre/runtest.sh
	modified:   mustacchi/runtest.sh
	modified:   navarro/runtest.sh
	modified:   nolibelf/runtest.sh
	modified:   offsetfromlowpc/runtest.sh
	modified:   sandnes2/runtest.sh
	modified:   strsize/runt

--- a/bad-dwop/BUILD
+++ b/bad-dwop/BUILD
@@ -1,6 +1,10 @@
 
 cc -c -gdwarf-3 -O0 test.c  -o testd3.o
+/tmp/dwarfdump -i -v -M testd3.o >junkd3
 cc -c -gdwarf-5 -O0 test.c  -o testd5.o
-/tmp/dwarfgen -v 5 -t obj -c 0 --add-skip-branch-ops -o badskipbranch.o testd5.o
-/tmp/dwarfdump -vvv -i -M badskipbranch.o >junk
+/tmp/dwarfdump -i -v -M testd5.o >junkd5
+/tmp/dwarfgen -v 5 -t obj -c 0 --add-skip-branch-ops -o badskipbranchd5.o testd5.o
+/tmp/dwarfgen -v 5 -t obj -c 0 --add-skip-branch-ops -o badskipbranchd3.o testd3.o
+/tmp/dwarfdump -v -i -M badskipbranchd3.o >junkfinald3
+/tmp/dwarfdump -v -i -M badskipbranchd5.o >junkfinald5
 
