Modified commentary for clarity. 	modified:   dwarfdump.conf update of file recreated on every run. 	modified:   dwgenc/testoutput.o

--- a/dwarfdump.conf
+++ b/dwarfdump.conf
@@ -2,10 +2,12 @@
 # Used to configure dwarfdump printing of .debug_frame and
 # .eh_frame.
 
-# Uncomment the following to turn on the new and better
-# format of DW_OP Dwarf expressions without needing
-# to use the option on the command line.
-#option: --format-expr-op-per-line
+# To always format DWARF expressions blocks as all operations on
+# one line (a limited version of -d (--format-dense))
+# without needing to use the dwarfdump option
+# --format-expr-ops-joined explicitly, 
+# remove the # from the following line.
+#option: --format-expr-ops-joined
 
 # Any number of abi's can be described. Only one can be selected
 # in a given dwarfdump run (see dwarfdump options)
