Changes reflect the omission of libdwarf from dwarfdump. 	modified:   BASEFUNCS.sh 	modified:   CHECKIFRUNNING.sh 	modified:   DWARFTEST.sh 	modified:   Makefile.in 	modified:   PICKUPBIN.sh 	modified:   RUNALL.sh 	modified:   baddie1/runtest.sh 	modified:   bigobj/runtest.sh 	modified:   checkforlibz/runtest.sh 	modified:   configure 	modified:   configure.ac 	modified:   data16/runtest.sh 	modified:   debugfission/runtest.sh 	modified:   debugfissionb/nodwarf.base 	modified:   debugfissionb/nodwarfexit1.base 	modified:   debugfissionb/runtest.sh 	modified:   debuglink/runtest.sh 	modified:   dwarfextract/runtest.sh 	modified:   dwgena/runtest.sh 	modified:   dwgenc/runtest.sh 	modified:   dwgenc/testoutput.o 	modified:   enciso4/runtest.sh 	modified:   findcu/runtest.sh 	modified:   frame1/runtest.sh 	modified:   guilfanov/runtest.sh 	modified:   hughes2/runtest.sh 	modified:   implicitconst/runtest.sh 	modified:   legendre/runtest.sh 	modified:   mustacchi/runtest.sh 	modified:   mustacchi/runtestnolibelf.sh 	modified:   navarro/runtest.sh 	modified:   nolibelf/runtest.sh 	modified:   offsetfromlowpc/runtest.sh 	modified:   sandnes2/runtest.sh 	modified:   strsize/runtest.sh 	modified:   supplementary/runtest.sh 	modified:   test-alex1/runtest.sh 	modified:   test-alex2/runtest.sh 	modified:   testdwarfdump.conf 	modified:   testoffdie/runtest.sh 	modified:   williamson/runtest.sh

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ all:  pretest build testonly
 test: pretest build testonly
 
 build: pretest
-	sh $(testsrc)/PICKUPBIN $(buildwithlibelf) 
+	sh $(testsrc)/PICKUPBIN.sh $(buildwithlibelf) 
 
 check: pretest testonly
 testonly:
