--- a/Makefile.in
+++ b/Makefile.in
@@ -33,3 +33,18 @@ distclean: clean
 	rm -fr autom4te.cache
 	rm -f dwarfdump.O
 	rm -f dwarfdump2.O
+	rm -f baddie1/dwarfdump.conf
+	rm -f bigobj/dwarfdump.conf
+	rm -f data16/dwarfdump.conf
+	rm -f debugfission/dwarfdump.conf
+	rm -f debugfissionb/dwarfdump.conf
+	rm -f debuglink/dwarfdump.conf
+	rm -f dwarfextract/dwarfdump.conf
+	rm -f dwgena/dwarfdump.conf
+	rm -f dwgenc/dwarfdump.conf
+	rm -f emre2/dwarfdump.conf
+	rm -f enciso4/dwarfdump.conf
+	rm -f fails
+	rm -f guilfanov/dwarfdump.conf
+	rm -f implicitconst/dwarfdump.conf
+
