Do not use mips-irix or mips-irix2 as an ABI in dwarfdump.conf as these are gone, they were for testing old libdwarf functions that have been removed from the library. 	modified:   DWARFTEST.sh Removed  mips-irix or mips-irix2 ABI contents. 	modified:   dwarfdump.conf
Was using an obsolete libdwarf function. Now using
the long-existing current version.
	modified:   legendre/frame_test.c

--- a/dwarfdump.conf
+++ b/dwarfdump.conf
@@ -38,139 +38,12 @@
 #
 
 
-# MIPS abi,the old IRIX form, not to be used on modern objects.
-# Begin with abi name (use here and on dwarfdump command line).
-beginabi: mips-irix
-
-# Instructs dwarfdump to default to the older frame interface.
-# Use value 3 to use the newer interface.
-# The '2' interface is supported but deprecated (deprecated
-# because it cannot work with all popular ABIs: mixing
-# the cfa-rule into the table column set was not a good idea
-# but it is part of the MIPS/IRIX standard usage).
-frame_interface: 2
-
-# If (and only if) using  frame_interface: 2 tell dwarfdump
-# what table colum that DW_FRAME_CFA_COL is.
-# If using frame_interface: 3 cfa_reg: should be 
-#  DW_FRAME_CFA_COL3 (1436)
-cfa_reg: 0
-
-# For MIPS, the same as DW_FRAME_SAME_VAL (1035).
-# For other ISA/ABIs 1034 (DW_FRAME_UNDEFINED_VAL) might be better.
-# Depends on the ABI convention, if set wrong way too many
-# regs will be listed in the frame output.
-# This instructs  dwarfdump  to set libdwarf to this value,
-# overriding the libdwarf default.
-# If initial_reg_value not set the libdwarf default is used
-# (see libdwarf.h DW_FRAME_REG_INITIAL_VALUE).
-initial_reg_value:  1035  # DW_FRAME_SAME_VAL
-same_val_reg: 1035   
-undefined_val_reg: 1034  
-
-# Built in to frame_interface: 2 as 66.
-reg_table_size: 66
-
-
-# Only name registers for wich a r4 (for example) is not what you
-# want to  see
-# No particular order  of the reg: lines required.
-reg: cfa 0   # Used with MIPS/IRIX original DWARF2 interface
-reg: r1/at 1
-reg: r2/v0 2 
-reg: r3/v1 3
-reg: r4/a0  4
-reg: r5/a1  5
-reg: r6/a2  6
-reg: r7/a3  7
-reg: r8/t0  8
-reg: r9/t1  9
-reg: r10/t2 10
-reg: r11/t3 11
-reg: r12/t4 12
-reg: r13/t5 13
-reg: r14/t6 14
-reg: r15/t7 15
-reg: r16/s0 16
-reg: r17/s1 17
-reg: r18/s2 18
-reg: r19/s3 19
-reg: r20/s4 20
-reg: r21/s5 21
-reg: r22/s6 22
-reg: r23/s7 23
-reg: r24/t8 24
-reg: r25/t9 25
-reg: r26/k0 26
-reg: r27/k1 27
-reg: r28/gp 28
-reg: r29/sp 29
-reg: r30/s8 30
-reg: r31  31
-
-reg: $f0 32
-reg: $f1 33
-reg: $f2  34
-reg: $f3 35
-reg: $f4 36
-reg: $f5 37
-reg: $f6 38
-reg: $f7 39
-reg: $f8 40
-reg: $f9 41
-reg: $f10 42
-reg: $f11 43
-reg: $f12 44
-reg: $f13 45
-reg: $f14  46
-reg: $f15 47
-reg: $f16 48
-reg: $f17 49
-reg: $f18 50
-reg: $f19 51
-reg: $f20 52
-reg: $f21 53
-reg: $f22 54
-reg: $f23 55
-reg: $f24 56
-reg: $f25 57
-reg: $f26 58
-reg: $f27 59
-reg: $f28 60
-reg: $f29 61
-reg: $f30 62
-reg: $f31 63
-reg: ra  64
-reg: slk 65
-
-
-# End of abi definition.
-endabi: mips-irix
-
-
 # Make 'mips' abi be a modern MIPS, not an old IRIX version.
 beginabi: mips
 includeabi: mips-simple3
 endabi: mips
 
-
-# MIPS/IRIX  ISA/ABI for testing libdwarf.
-beginabi: mips-irix2
-frame_interface: 2
-reg_table_size: 66
-cfa_reg: 0
-same_val_reg: 1035
-undefined_val_reg: 1034
-initial_reg_value:  1035
-
-reg: cfa 0   # Used with MIPS/IRIX original DWARF2 interface
-reg: ra  64
-reg: slk 65
-
-# End of abi definition.
-endabi: mips-irix2
-
-# MIPS/IRIX  ISA/ABI for testing  the new frame interface
+# MIPS/IRIX  ISA/ABI for testing  the current frame interface
 # with libdwarf.
 beginabi: mips-simple3
 frame_interface: 3
