--- a/BASEFILES.sh.in
+++ b/BASEFILES.sh.in
@@ -1,9 +1,7 @@
-#
-# By setting libdw
-# This file lets test directories know the directory
-# containing the source directories
-# libdwarf, dwarfdump, dwarfdump2, dwarfgen, and dwarfexample are.
+# This file lets test directories know where relevant
+# directories are.
 
-# Configure appends a choice, and you can specify the
-# correct value with
-# ./configure --enable-libdwarf=/some/path
+# Main configure options:
+# ./configure --enable-libdwarf=/path/to/code --enable-shared
+# Less useful:
+# --disable-libelf 
