--- a/configure.ac
+++ b/configure.ac
@@ -2,18 +2,18 @@ dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl configure can only work sensibly run like ./configure [options]
 dnl
-AC_INIT()
+AC_INIT
 AC_CONFIG_SRCDIR([configure.ac])
-AC_CONFIG_HEADER(config.h)
+AC_CONFIG_HEADERS([config.h])
 
 AC_PROG_CC
 AC_C_BIGENDIAN
-AC_GCC_TRADITIONAL
+AC_PROG_GCC_TRADITIONAL
 AC_PROG_INSTALL
 AC_CHECK_TOOL(RANLIB, ranlib, :)
 AC_CHECK_TOOL(AR, ar)
 
-AC_CANONICAL_SYSTEM
+AC_CANONICAL_TARGET
 # i686-pc-linux-gnu
 
 # The path to libdwarf source we want is a path to
@@ -22,17 +22,36 @@ AC_CANONICAL_SYSTEM
 here=`pwd`
 # The following for generating Makefile
 # not using datadir quite as autoconf expects.
+echo "here: $here"
+echo "srcdir: $srcdir"
 if test "$srcdir" = "."
 then
+  # srcdir is the test source
   srcdir=$here
 fi
-codedir=$srcdir/../code
-datadir=$srcdir/../code
+#srcdir is regressiontests source dir
+#codedir is libdwarf code source dir
+#datadir is libdwarf code source 'data'
+codedir=
+for s in code libdwarf-code
+do
+  echo "Try $srcdir/../$s"
+  if test -d  $srcdir/../$s  ; then
+    codedir=$srcdir/../$s
+    datadir=$srcdir/../$s
+    #echo "FOUND codedir as $codedir"
+  fi
+done
 
+if test  "x$codedir" = "x"  ; then
+  echo "Unable to locate codedir off of $srcdir"
+  exit 1
+fi
+echo "FOUND codedir as $codedir"
 
+# ALLow user to specify the code source dir
 AC_ARG_ENABLE(libdwarf,
-  AC_HELP_STRING([--enable-libdwarf=sourcedirectory],
-  [Give the full path to the libdwarf/dwarfdump source base]),
+  AS_HELP_STRING([--enable-libdwarf=sourcedirectory],[Give the full path to the libdwarf/dwarfdump source base]),
   [ ],[ ])
 rm -f junkckpath
 echo libdwarfval $enableval
@@ -51,6 +70,18 @@ then
   rm -f junkckpath
 fi
 
+# ALLow user to specify the code source dir
+AC_ARG_ENABLE(shared,
+  AS_HELP_STRING([--enable-shared],
+    [Enable shared libdwarf, not static (default is static)
+    @<:@default=no@:>@]]),
+   [ AS_IF(
+        [test "x${enableval}" = "xyes"],
+        [enableshared=yes])
+   ],
+   [enableshared=no])
+
+
 AC_ARG_ENABLE([libelf],
    [AS_HELP_STRING([--disable-libelf],
      [disable use of libelf (default is enable) @<:@default=yes@:>@])],
@@ -61,7 +92,7 @@ AC_ARG_ENABLE([libelf],
    ],
    [dwarf_with_libelf="withlibelf"])
 
-if test  $dwarf_with_libelf = "withlibelf" ; then
+if test $dwarf_with_libelf = "withlibelf" ; then
   AC_CHECK_HEADERS(libelf.h libelf/libelf.h)
 
   ### if no libelf.h add no -lelf and turn off
@@ -88,6 +119,21 @@ if test $dwarf_with_libelf = "withlibelf" ; then
   AC_SUBST(withlibelf,"withlibelf")
 else
   AC_SUBST(withlibelf,"nolibelf")
+fi
+
+AC_ARG_ENABLE([shared],
+   [AS_HELP_STRING([--enable-shared],
+     [enable test using shared libdwarf (default is static) @<:@default=no@:>@])],
+   [ AS_IF(
+        [test "x${enableval}" = "xyes"],
+        [sharedlib="sharedlib"])
+   ],
+   [sharedlib="n"])
+
+if test $sharedlib = "sharedlib" ; then
+  AC_SUBST(sharedlib,"sharedlib")
+else
+  AC_SUBST(sharedlib,"n")
 fi
 
 
@@ -155,6 +201,7 @@ do
   fi
 done
 
+### Now set up BASEFILES.sh to initialize vars for DWARFTEST.sh
 cp $srcdir/BASEFILES.sh.in BASEFILES.sh
 if test $? -ne 0 
 then
@@ -169,34 +216,59 @@ else
 fi
 pyloc="$tsa/scripts/canonicalpath.py"
 ts=`$pyloc $tsa`
-echo "testsrc=$ts" >>      BASEFILES.sh
+echo "testsrc=$ts" >>           BASEFILES.sh
 lw=`$pyloc $codedir`
-echo "libdw=$lw" >>        BASEFILES.sh
+echo "libdw=$lw" >>             BASEFILES.sh
 cod=`$pyloc $codedir`
-echo "codedir=$cod" >>     BASEFILES.sh
+echo "codedir=$cod" >>          BASEFILES.sh
 echo "bldtest=$abs_builddir" >> BASEFILES.sh
+
+### Now copy code source files to the test directory
+if test ! -f SHALIAS.sh ; then
+  cp  $srcdir/SHALIAS.sh SHALIAS.sh
+fi
+if test ! -f exfail.py ;  then
+  cp  $srcdir/exfail.py exfail.py
+fi
+if test ! -f dwarfdump.conf ;  then
+  cp  $codedir/src/bin/dwarfdump/dwarfdump.conf dwarfdump.conf
+fi
+#libbld is libdwarf build directory.
 libbld=$abs_builddir/libbld
-echo "libbld=$libbld" >>   BASEFILES.sh
-cp  $srcdir/SHALIAS.sh     SHALIAS.sh
-cp  $srcdir/exfail.py      exfail.py
-cp  $codedir/src/bin/dwarfdump/dwarfdump.conf     dwarfdump.conf
+echo "libbld=$libbld" >>        BASEFILES.sh
+echo "sharedlib=$sharedlib"  >> BASEFILES.sh
+echo "dwarf_with_libelf=$dwarf_with_libelf"  >> BASEFILES.sh
+
 for d in baddie1 bigobj data16 debugfissionb debugfission debuglink \
   dwarfextract dwgena dwgenc emre2 enciso4 guilfanov \
   implicitconst moore mustacchi nolibelf offsetfromlowpc \
   sandnes2 strsize supplementary testoffdie williamson
 do
-  mkdir $abs_builddir/$d
-  cp dwarfdump.conf $abs_builddir/$d/dwarfdump.conf
+  if test ! -d $abs_builddir/$d
+  then
+    mkdir $abs_builddir/$d
+  fi
+  if test ! -f $abs_builddir/$d/dwarfdump.conf ; then
+    cp dwarfdump.conf $abs_builddir/$d/dwarfdump.conf
+  fi
 done
+
+useshared=no
+echo "sharedlib = $sharedlib"
+if test $sharedlib = "sharedlib" ; then
+  useshared="yes"
+fi
+
 echo "Configuration Options Summary:"
 echo
 echo " have libelf............: ${dwarf_with_libelf}"
 echo " dwarfgen...............: ${enable_dwarfgen}"
-echo " testbuilddir...........: $abs_builddir"
-echo " libbuilddir............: $libbld"
+echo " testbuilddir...........: ${abs_builddir}"
+echo " libdwarf.build.dir.....: $libbld"
+echo " libdwarf.so............: $useshared"
 echo " regressiontests........: $ts"
 echo " code...................: $cod"
 
 echo "Ready to test."
-
-AC_OUTPUT(Makefile)
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
