Fixed runtest to work with the updated BASEFILES.sh created by configue.
All the .sh now use BASEFILES.sh properly and
do not need arguments.

Now possible to build shared-lib libdwarf
and test it. If shared-lib build some
additional SKIPs  as dwarfgen not
supported here yet.
	modified:   BASEFILES.sh.in
	modified:   DWARFTEST.sh
	modified:   Makefile.in
	modified:   PICKUPBIN.sh
	modified:   README.md
	modified:   RUNALL.sh
	modified:   checkforlibz/runtest.sh
	modified:   checkforlibzstd/runtest.sh
	modified:   config.guess
	new file:   config.h
	modified:   config.h.in
	new file:   config.log
	new file:   config.status
	modified:   config.sub
	modified:   configure
	modified:   configure.ac
	modified:   findcu/runtest.sh
	modified:   frame1/runtest.sh
	modified:   legendre/runtest.sh
	modified:   test-alex1/runtest.sh
	modified:   test-alex2/runtest.sh
	modified:   testoffdie/runtest.sh

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,18 +12,18 @@ all:  pretest build testonly
 test: pretest build testonly
 
 build: pretest
-	sh $(testsrc)/PICKUPBIN.sh $(buildwithlibelf) 
+	sh $(testsrc)/PICKUPBIN.sh
 
 check: pretest testonly
 testonly:
-	sh $(testsrc)/RUNALL.sh $(buildwithlibelf)
+	sh $(testsrc)/RUNALL.sh
 pretest:
 	sh $(testsrc)/CHECKIFRUNNING.sh
 # RUNALL.sh does this
 dd:
-	$(testsrc)/DWARFTEST.sh $(buildwithlibelf)  2>ALLdd 1>&2
+	$(testsrc)/DWARFTEST.sh   2>ALLdd 1>&2
 clean:
-	sh $(testsrc)/CLEANUP 
+	sh $(testsrc)/CLEANUP.sh 
 distclean: clean
 	rm -f Makefile
 	rm -f config.h
