Added details 	modified:   issue137gh/README This is just used for speicific single tests, not used in standard testing.. 	modified:   pubnames/BUILD

--- a/pubnames/BUILD
+++ b/pubnames/BUILD
@@ -2,3 +2,5 @@
 
 #Done once. Do not compile again.
 #gcc -g0 -gdwarf-3 -gpubnames  testm.c tests.c -o tests.exe
+
+#gcc -gdwarf-5 testm.c tests.c -o dw5tests.exe
