Removed unneeded comments. 	modified:   debugaddr/BUILD

--- a/debugaddr/BUILD
+++ b/debugaddr/BUILD
@@ -2,9 +2,8 @@
 
 # Created November 4, 2022 based on the four line
 # example C++ test source provided by David Blaikie.
+# Plus additional t2.c I copied/altered.
 
 # do not rerun. This is the command to build blaik.so
-#clang++  -shared -gdwarf-5 -fpic   blaik.cc -g  -fpic  -o blaik.so
-# this second one is a better test as we get two addr tables.
 #clang++  -shared -gdwarf-5 -fpic   blaik.cc t2.cc -g  -fpic  -o blaik.so
 
