Now each has a 'fakeabi' which has bogus adress_size: to get better coverage of libdwarf dwarf_set_default_address_size()
	modified:   dwarfdump.conf
	modified:   testdwarfdump.conf

--- a/testdwarfdump.conf
+++ b/testdwarfdump.conf
@@ -689,3 +689,20 @@ reg: d31     287
 # End of abi definition.
 endabi: arm
 
+beginabi: fakeabi
+frame_interface: 3
+# When using frame_interface: 3 the size of the register
+# table is not fixed.  It can be as large as needed.
+reg_table_size: 288
+cfa_reg: 1436  # DW_FRAME_CFA_COL3
+initial_reg_value:  1034
+same_val_reg: 1035
+undefined_val_reg: 1034
+# This for code coverage. libdwarf will ignore
+# this attempt to set bogus address size
+address_size: 0
+# This for code coverage. libdwarf will ignore
+# this attempt to set bogus address size
+address_size: 24
+
+endabi: fakeabi
