Now we use meson/ninja to build for regressiontesting.
We do not use make anywhere, it is
all relatively simple shell scripts.

configure is used (with no options) just to
establish directory locations.

We do keep a single Makefile.in (which we ignore)
to avoid a warning from the initial configure.
	modified:   BASEFILES.sh.in
	modified:   Makefile.in
	modified:   PICKUPBIN.sh
	modified:   README.md
	modified:   RUNALL.sh

--- a/BASEFILES.sh.in
+++ b/BASEFILES.sh.in
@@ -1,6 +1,6 @@
 # This file lets test directories know where relevant
 # directories are.
-
-# Main configure options:
-# ./configure --enable-libdwarf=/path/to/code --enable-shared
-#             --disable-libelf 
+# Running configure with no options sets up base
+# pathnames for the tests,
+# and those names (assigned to shell variables)
+# are appended to this file.
